--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ channels-redis==2.3.1
 constantly==15.1.0
 daphne==2.2.2
 Django==2.1.2
+gunicorn==19.9.0
 hiredis==0.2.0
 hyperlink==18.0.0
 idna==2.7
