--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ incremental==17.5.0
 msgpack==0.5.6
 PyHamcrest==1.9.0
 pytz==2018.5
+redis==2.10.6
 selenium==3.14.1
 six==1.11.0
 Twisted==18.9.0
